<resources>
    <string name="app_name">Callify</string>
    <string name="status_running">Callify is running.</string>
    <string name="overlay_permission_explanation">Callify needs permission to display caller information on top of other apps. Please enable it in the next screen.</string>
    <string name="caller_name_format">%1$s %2$s</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="not_found_address">Not in Callify database</string>
    <string name="timeout_name">Lookup timed out</string>
    <string name="timeout_address">Could not reach server in time</string>
    <string name="network_error_name">No connection</string>
    <string name="network_error_address">Check your internet connection</string>
    <string name="address_unavailable">Address unavailable</string>
    <string name="about_label">About</string>
    <string name="about_subtitle">Callify identifies incoming callers in real time using your organisation\'s contact database. It runs quietly in the background and only activates when your phone rings.</string>
    <string name="permissions_label">Permissions</string>
    <string name="permission_phone_state">Phone State</string>
    <string name="permission_notifications">Notifications</string>
    <string name="permission_overlay">Draw Over Apps</string>
    <string name="permission_phone_numbers">Phone Number Access</string>
</resources>